[project]
name = "zgx-unsloth"
version = "0.1.0"
description = "Fine-tuning Llama models with Unsloth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.55.0", 
    "accelerate>=0.34.0",
    "datasets>=3.0.0",
    "peft>=0.12.0",
    "trl>=0.11.0",
    "bitsandbytes>=0.44.0",
    "triton>=3.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "seaborn>=0.13.0",
    "gradio>=4.0.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "datasets/*.json",
]
exclude = [
    "*.pyc",
    "__pycache__",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]